--- a/src/Itage.Prometheus.RouteMetrics/Itage.Prometheus.RouteMetrics.csproj
+++ b/src/Itage.Prometheus.RouteMetrics/Itage.Prometheus.RouteMetrics.csproj
@@ -1,16 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
-        <LangVersion>8</LangVersion>
+        <LangVersion>10</LangVersion>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
-        <Version>4.2.0</Version>
+        <Version>4.5.0</Version>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2"/>
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5"/>
-        <PackageReference Include="Prometheus.Client" Version="4.3.0"/>
-        <PackageReference Include="Prometheus.Client.AspNetCore" Version="4.2.0"/>
+        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Prometheus.Client" Version="4.5.3"/>
+        <PackageReference Include="Prometheus.Client.AspNetCore" Version="4.5.0"/>
     </ItemGroup>
 </Project>
